--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.7",
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "@material-ui/pickers": "^3.1.1",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "moment-with-locales-es6": "^1.0.1",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
