--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^3.21.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
