--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "moment-with-locales-es6": "^1.0.1",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^16.8.6",
     "react-hook-form": "^3.21.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "source-map-explorer": "^2.0.1"
   },
   "scripts": {
     "start": "node index.js",
@@ -27,7 +27,8 @@
     "start-dev": "concurrently \"npm run start\" \"npm run start-client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
