--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@material-ui/pickers": "^3.1.1",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
