--- a/package.json
+++ b/package.json
@@ -3,27 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/moment": "^1.3.7",
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0",
-    "@material-ui/pickers": "^3.1.1",
+    "@date-io/moment": "^1.3.11",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fuse.js": "^3.4.5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.6.0",
+    "mongoose": "^5.7.6",
     "morgan": "^1.9.1",
-    "react": "^16.8.6",
-    "react-beautiful-dnd": "^11.0.4",
-    "react-dom": "^16.8.6",
-    "react-hook-form": "^3.21.1",
+    "polished": "^3.4.1",
+    "react": "^16.10.2",
+    "react-beautiful-dnd": "^11.0.5",
+    "react-dom": "^16.10.2",
+    "react-hook-form": "^3.24.1",
     "react-scripts": "3.0.1",
-    "source-map-explorer": "^2.0.1"
+    "source-map-explorer": "^2.1.0",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "node index.js",
@@ -52,7 +54,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^4.1.1",
-    "nodemon": "^1.19.3"
+    "concurrently": "^4.1.2",
+    "nodemon": "^1.19.4"
   }
 }
