--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.7.6",
     "morgan": "^1.9.1",
     "polished": "^3.4.1",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.10.2",
@@ -29,7 +30,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "start-client": "react-scripts start",
+    "start-client": "PORT=3001 react-scripts start",
     "start-dev": "concurrently \"npm run start\" \"npm run start-client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
