--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "start-client": "PORT=3001 react-scripts start",
+    "start-client": "react-scripts start",
     "start-dev": "concurrently \"npm run start\" \"npm run start-client\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
